fixed image sizing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,10 @@ section {
 }
 
 section img {
-    width: 80%;
-  max-width: 300px; 
-  height: auto;
+   
+    width: 6em;
+    max-width: 300px; 
+    height: auto;
 }
 
 section p {
@@ -87,7 +88,6 @@ section:hover {
 }
 
 .a .full-link{
-    /* display: block; */
     height: 100%;
     width: 100%;
     text-decoration: none;
